--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <h1>A map of New York Showing the End points of Rides in Feb 2016 by age</h1>
 <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
-<script src="/201602-bike-data3.js"></script>
+<script src="201602-bike-data3.js"></script>
 
 <div id="mapid" style="width: 600px; height: 400px"></div>
 
