--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-<h1>A map of New York Showing the End points of Rides in Feb 2016 by age</h1>
+<h1>New York by Bike</h1>
+<h2>Points represents end points</h2>
+<h2>Colour represents age (darker is older)</h2>
 <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 <script src="201602-bike-data3.js"></script>
 
